@@ -19,7 +19,8 @@ class About extends Application
 	 */
 	public function index()
 	{
-		$this->load->view('About'); 
+		$this->data['pagebody'] = 'about';
+        $this->render();
 	}
 
 }
