@@ -19,7 +19,8 @@ class Welcome extends Application
 	 */
 	public function index()
 	{
-		$this->load->view('welcome'); 
+		$this->data['pagebody'] = 'welcome';
+        $this->render();
 	}
 
 }
