@@ -1,44 +1,11 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.1//EN" "http://www.w3.org/TR/xhtml11/DTD/xhtml11.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml">
-    <head>
-        <title>About This Gallery</title>
-        <meta HTTP-EQUIV="Content-Type" CONTENT="text/html; charset=UTF-8"/>
-        <link rel="stylesheet" type="text/css" media="all" href="css/reset.css" />
-        <link rel="stylesheet" type="text/css" media="all" href="css/text.css" />
-        <link rel="stylesheet" type="text/css" media="all" href="css/style.css" />
-        <link rel="stylesheet" type="text/css" media="all" href="css/lightbox.css" />
-    </head>
-    <body>
-        <div id="wrapper">
-            <div id="header">
-                <span class="myhead">Simple Image Gallery</span>
-                <span class="mynav">
-                    <ul>
-                        <li><a href="/">Home</a></li>
-                        <li><a href="/gallery">Gallery</a></li>
-                        <li><a href="/about">About</a></li>
-                    </ul>
-                </span>
-            </div>
-            <div class="alone"></div>
-            <div id="content">
-                <h1>About This Site</h1>
-                <p>This is a really simple image gallery, intended as more than a "hello world" example'
-                    to be implemented using different MVC frameworks, so they can be compared.</p>
-                <p>This site started out as the "Simple Gallery" from <a href="http://bryantsmith.com" target="_blank">Bryant Smith</a>.</p>
-                <h2>The Images</h2>
-                <p>Images are stored in a "data" folder inside the document root, and they are described in an "images" table, for
-                    which a SQL script is provided.</p>
-                <h2>Supporting Technologies</h2>
-                <p>The website uses the jquery Javascript framework, so that it can also use the jquery lightbox plugin.</p>
-                <h2>The Story</h2>
-                <p>This website was created for the Spring 2014 session of ACIT2910, at <a href="http://www.bcit.ca" target="_blank">BCIT</a>.</p>
-            </div>
-            <div id="footer" class="span12">
-                Copyright &copy; 2014,  <a href="mailto:someone@somewhere.com">Me</a>.
-            </div>
-        </div>
-        <script type="text/javascript" src="js/jquery-1.11.0.min.js"></script> 
-        <script type="text/javascript" src="js/lightbox.min.js"></script> 
-    </body>
-</html>
+<h1>About This Site</h1>
+<p>This is a really simple image gallery, intended as more than a "hello world" example'
+    to be implemented using different MVC frameworks, so they can be compared.</p>
+<p>This site started out as the "Simple Gallery" from <a href="http://bryantsmith.com" target="_blank">Bryant Smith</a>.</p>
+<h2>The Images</h2>
+<p>Images are stored in a "data" folder inside the document root, and they are described in an "images" table, for
+    which a SQL script is provided.</p>
+<h2>Supporting Technologies</h2>
+<p>The website uses the jquery Javascript framework, so that it can also use the jquery lightbox plugin.</p>
+<h2>The Story</h2>
+<p>This website was created for the Spring 2014 session of ACIT2910, at <a href="http://www.bcit.ca" target="_blank">BCIT</a>.</p>
