@@ -1,103 +1,71 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.1//EN" "http://www.w3.org/TR/xhtml11/DTD/xhtml11.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml">
-    <head>
-        <title>The Gallery</title>
-        <meta HTTP-EQUIV="Content-Type" CONTENT="text/html; charset=UTF-8"/>
-        <link rel="stylesheet" type="text/css" media="all" href="css/reset.css" />
-        <link rel="stylesheet" type="text/css" media="all" href="css/text.css" />
-        <link rel="stylesheet" type="text/css" media="all" href="css/style.css" />
-        <link rel="stylesheet" type="text/css" media="all" href="css/lightbox.css" />
-    </head>
-    <body>
-        <div id="wrapper">
-            <div id="header">
-                <span class="myhead">Simple Image Gallery</span>
-                <span class="mynav">
-                    <ul>
-                        <li><a href="/">Home</a></li>
-                        <li><a href="/gallery">Gallery</a></li>
-                        <li><a href="/about">About</a></li>
-                    </ul>
-                </span>
-            </div>
-            <div class="alone"></div>
-            <div id="content">
-                <table cols="3" class="gallery">
-                    <tr>
-                        <td class="oneimage">
-                            <a href="./data/Katmai_Crater_1980.jpg" data-lightbox="gallery" data-title="Katmai Crater - Mount Katmai, Alaska ... Posted 2014.05.05 by donald, in landscape"><img src="./data/thumb/Katmai_Crater_1980.jpg"/></a>
-                        </td>
-                        <td class="oneimage">
-                            <a href="./data/Caledonian_orogeny_fold_in_King_Oscar_Fjord.jpg" data-lightbox="gallery" data-title="Caledonian orogeny fold in King Oscar Fjord ... Posted 2014.05.04 by mickey, in landscape"><img src="./data/thumb/Caledonian_orogeny_fold_in_King_Oscar_Fjord.jpg"/></a>
-                        </td>
-                        <td class="oneimage">
-                            <a href="./data/Lands_End_Cape_Cornwall.jpg" data-lightbox="gallery" data-title="Land's End, Cape Cornwall and the Brisons ... Posted 2014.05.04 by mickey, in landscape"><img src="./data/thumb/Lands_End_Cape_Cornwall.jpg"/></a>
-                        </td>
-                    </tr>
-                    <tr>
-                    </tr>
-                    <tr>
-                        <td class="oneimage">
-                            <a href="./data/kukulcan-the-main-temple-at-chichen-itza.jpg" data-lightbox="gallery" data-title="Kukulcan, the Main Temple at Chichen Itza ... Posted 2014.05.04 by mickey, in landmark"><img src="./data/thumb/kukulcan-the-main-temple-at-chichen-itza.jpg"/></a>
-                        </td>
-                        <td class="oneimage">
-                            <a href="./data/Tour_Eiffel_Wikimedia_Commons.jpg" data-lightbox="gallery" data-title="Eiffel Tower, seen from the champ de Mars, Paris, France ... Posted 2014.05.03 by mickey, in landmark"><img src="./data/thumb/Tour_Eiffel_Wikimedia_Commons.jpg"/></a>
-                        </td>
-                        <td class="oneimage">
-                            <a href="./data/the-great-wall-of-china-beautiful-stretch-with-no-tourists.jpg" data-lightbox="gallery" data-title="The Great Wall With a Gorgeous Sky ... Posted 2014.05.02 by donald, in landmark"><img src="./data/thumb/the-great-wall-of-china-beautiful-stretch-with-no-tourists.jpg"/></a>
-                        </td>
-                    </tr>
-                    <tr>
-                    </tr>
-                    <tr>
-                        <td class="oneimage">
-                            <a href="./data/colosseum-at-rome-upper-view.jpg" data-lightbox="gallery" data-title="Colosseum of Rome Upper View ... Posted 2014.05.01 by mickey, in landmark"><img src="./data/thumb/colosseum-at-rome-upper-view.jpg"/></a>
-                        </td>
-                        <td class="oneimage">
-                            <a href="./data/yun_9036.jpg" data-lightbox="gallery" data-title="Yokohama Minato Mirai 21 ... Posted 2014.04.15 by mickey, in landscape"><img src="./data/thumb/yun_9036.jpg"/></a>
-                        </td>
-                        <td class="oneimage">
-                            <a href="./data/yun_9944.jpg" data-lightbox="gallery" data-title="A skyscraper of Shanghai ... Posted 2014.04.15 by mickey, in landmark"><img src="./data/thumb/yun_9944.jpg"/></a>
-                        </td>
-                    </tr>
-                    <tr>
-                    </tr>
-                    <tr>
-                        <td class="oneimage">
-                            <a href="./data/3219865267_15038512c0_z.jpg" data-lightbox="gallery" data-title="Mesoamerican archaeological site located in the state of Puebla, Mexico ... Posted 2014.04.08 by donald, in landscape"><img src="./data/thumb/3219865267_15038512c0_z.jpg"/></a>
-                        </td>
-                        <td class="oneimage">
-                            <a href="./data/6520239147_40e797cea1_b.jpg" data-lightbox="gallery" data-title="Rwanda landscape ... Posted 2014.04.07 by mickey, in landscape"><img src="./data/thumb/6520239147_40e797cea1_b.jpg"/></a>
-                        </td>
-                        <td class="oneimage">
-                            <a href="./data/industrial-landscape.jpg" data-lightbox="gallery" data-title="Industrial Landscape – Didcot Power Station ... Posted 2014.04.06 by mickey, in landmark"><img src="./data/thumb/industrial-landscape.jpg"/></a>
-                        </td>
-                    </tr>
-                    <tr>
-                    </tr>
-                    <tr>
-                        <td class="oneimage">
-                            <a href="./data/serengeti-landscape.jpg" data-lightbox="gallery" data-title="Beautiful Landscape of Serengeti ... Posted 2014.04.05 by donald, in landscape"><img src="./data/thumb/serengeti-landscape.jpg"/></a>
-                        </td>
-                        <td class="oneimage">
-                            <a href="./data/new-zealand-landscape-cc-2006-big.jpg" data-lightbox="gallery" data-title="New Zealand landscape ... Posted 2014.04.02 by mickey, in landscape"><img src="./data/thumb/new-zealand-landscape-cc-2006-big.jpg"/></a>
-                        </td>
-                        <td class="oneimage">
-                            <a href="./data/5187516909_d07a5beb13_b.jpg" data-lightbox="gallery" data-title="Scientists in Antarctic landscape ... Posted 2014.04.01 by donald, in landscape"><img src="./data/thumb/5187516909_d07a5beb13_b.jpg"/></a>
-                        </td>
-                    </tr>
-                    <tr>
-                    </tr>
-                    <tr>
-                    </tr>
-                </table>
-                <h1>The image gallery, complete :)</h1>
-            </div>
-            <div id="footer" class="span12">
-                Copyright &copy; 2014,  <a href="mailto:someone@somewhere.com">Me</a>.
-            </div>
-        </div>
-        <script type="text/javascript" src="js/jquery-1.11.0.min.js"></script> 
-        <script type="text/javascript" src="js/lightbox.min.js"></script> 
-    </body>
-</html>
+
+<table cols="3" class="gallery">
+    <tr>
+        <td class="oneimage">
+            <a href="./data/Katmai_Crater_1980.jpg" data-lightbox="gallery" data-title="Katmai Crater - Mount Katmai, Alaska ... Posted 2014.05.05 by donald, in landscape"><img src="./data/thumb/Katmai_Crater_1980.jpg"/></a>
+        </td>
+        <td class="oneimage">
+            <a href="./data/Caledonian_orogeny_fold_in_King_Oscar_Fjord.jpg" data-lightbox="gallery" data-title="Caledonian orogeny fold in King Oscar Fjord ... Posted 2014.05.04 by mickey, in landscape"><img src="./data/thumb/Caledonian_orogeny_fold_in_King_Oscar_Fjord.jpg"/></a>
+        </td>
+        <td class="oneimage">
+            <a href="./data/Lands_End_Cape_Cornwall.jpg" data-lightbox="gallery" data-title="Land's End, Cape Cornwall and the Brisons ... Posted 2014.05.04 by mickey, in landscape"><img src="./data/thumb/Lands_End_Cape_Cornwall.jpg"/></a>
+        </td>
+    </tr>
+    <tr>
+    </tr>
+    <tr>
+        <td class="oneimage">
+            <a href="./data/kukulcan-the-main-temple-at-chichen-itza.jpg" data-lightbox="gallery" data-title="Kukulcan, the Main Temple at Chichen Itza ... Posted 2014.05.04 by mickey, in landmark"><img src="./data/thumb/kukulcan-the-main-temple-at-chichen-itza.jpg"/></a>
+        </td>
+        <td class="oneimage">
+            <a href="./data/Tour_Eiffel_Wikimedia_Commons.jpg" data-lightbox="gallery" data-title="Eiffel Tower, seen from the champ de Mars, Paris, France ... Posted 2014.05.03 by mickey, in landmark"><img src="./data/thumb/Tour_Eiffel_Wikimedia_Commons.jpg"/></a>
+        </td>
+        <td class="oneimage">
+            <a href="./data/the-great-wall-of-china-beautiful-stretch-with-no-tourists.jpg" data-lightbox="gallery" data-title="The Great Wall With a Gorgeous Sky ... Posted 2014.05.02 by donald, in landmark"><img src="./data/thumb/the-great-wall-of-china-beautiful-stretch-with-no-tourists.jpg"/></a>
+        </td>
+    </tr>
+    <tr>
+    </tr>
+    <tr>
+        <td class="oneimage">
+            <a href="./data/colosseum-at-rome-upper-view.jpg" data-lightbox="gallery" data-title="Colosseum of Rome Upper View ... Posted 2014.05.01 by mickey, in landmark"><img src="./data/thumb/colosseum-at-rome-upper-view.jpg"/></a>
+        </td>
+        <td class="oneimage">
+            <a href="./data/yun_9036.jpg" data-lightbox="gallery" data-title="Yokohama Minato Mirai 21 ... Posted 2014.04.15 by mickey, in landscape"><img src="./data/thumb/yun_9036.jpg"/></a>
+        </td>
+        <td class="oneimage">
+            <a href="./data/yun_9944.jpg" data-lightbox="gallery" data-title="A skyscraper of Shanghai ... Posted 2014.04.15 by mickey, in landmark"><img src="./data/thumb/yun_9944.jpg"/></a>
+        </td>
+    </tr>
+    <tr>
+    </tr>
+    <tr>
+        <td class="oneimage">
+            <a href="./data/3219865267_15038512c0_z.jpg" data-lightbox="gallery" data-title="Mesoamerican archaeological site located in the state of Puebla, Mexico ... Posted 2014.04.08 by donald, in landscape"><img src="./data/thumb/3219865267_15038512c0_z.jpg"/></a>
+        </td>
+        <td class="oneimage">
+            <a href="./data/6520239147_40e797cea1_b.jpg" data-lightbox="gallery" data-title="Rwanda landscape ... Posted 2014.04.07 by mickey, in landscape"><img src="./data/thumb/6520239147_40e797cea1_b.jpg"/></a>
+        </td>
+        <td class="oneimage">
+            <a href="./data/industrial-landscape.jpg" data-lightbox="gallery" data-title="Industrial Landscape – Didcot Power Station ... Posted 2014.04.06 by mickey, in landmark"><img src="./data/thumb/industrial-landscape.jpg"/></a>
+        </td>
+    </tr>
+    <tr>
+    </tr>
+    <tr>
+        <td class="oneimage">
+            <a href="./data/serengeti-landscape.jpg" data-lightbox="gallery" data-title="Beautiful Landscape of Serengeti ... Posted 2014.04.05 by donald, in landscape"><img src="./data/thumb/serengeti-landscape.jpg"/></a>
+        </td>
+        <td class="oneimage">
+            <a href="./data/new-zealand-landscape-cc-2006-big.jpg" data-lightbox="gallery" data-title="New Zealand landscape ... Posted 2014.04.02 by mickey, in landscape"><img src="./data/thumb/new-zealand-landscape-cc-2006-big.jpg"/></a>
+        </td>
+        <td class="oneimage">
+            <a href="./data/5187516909_d07a5beb13_b.jpg" data-lightbox="gallery" data-title="Scientists in Antarctic landscape ... Posted 2014.04.01 by donald, in landscape"><img src="./data/thumb/5187516909_d07a5beb13_b.jpg"/></a>
+        </td>
+    </tr>
+    <tr>
+    </tr>
+    <tr>
+    </tr>
+</table>
+<h1>The image gallery, complete :)</h1>
